--- a/AfterHoursACRequest/src/styles.scss
+++ b/AfterHoursACRequest/src/styles.scss
@@ -6,7 +6,7 @@ $approvedColor: #52c4c9;
 .ac-request-container {
     position: relative;
     width: 100%;
-    height: auto;
+    height: 100%;
     background-color: white;
     border-radius: 10px;
     padding: 10px;
@@ -50,7 +50,8 @@ $approvedColor: #52c4c9;
     .body {
         position: relative;
         width: 100%;
-        height: 320px;
+        height: auto;
+        max-height: 90%;
         overflow-y: auto;
         overflow-x: hidden;
 
@@ -122,6 +123,7 @@ $approvedColor: #52c4c9;
                     color: white;
                     text-align: center;
                     margin-bottom: 4px;
+                    text-transform: capitalize;
                 }
 
                 .date {
