--- a/VisitorSummaryCard/src/styles.scss
+++ b/VisitorSummaryCard/src/styles.scss
@@ -16,11 +16,27 @@ $calendar: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0CAYAAADFeBvrAA
     width: 100%;
     height: 100%;
 
+    .count {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 20px;
+        height: 20px;
+        transform: translate(90%, -90%);
+        border-radius: 50%;
+        background-color: #424242;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 9px;
+    }
+
     .visitor-summary-card {
         width: 100%;
         height: 100%;
         margin: 0;
-        padding: 20px;
+        padding: 20px 15px 8px 15px;
         background-color: white;
         border-radius: 10px;
         box-shadow: 0 0 16px 4px rgba(0, 0, 0, 0.12);
@@ -28,43 +44,30 @@ $calendar: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0CAYAAADFeBvrAA
         top: 0;
         left: 0;
         z-index: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
 
         * {
             box-sizing: border-box;
         }
 
-        .count {
-            position: absolute;
-            top: 0;
-            right: 0;
-            width: 22px;
-            height: 22px;
-            transform: translate(110%, -110%);
-            border-radius: 50%;
-            background-color: #424242;
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-
-        }
-
         .header {
             width: 100%;
             height: auto;
-            padding: 10px;
+            padding: 0px;
             display: flex;
             flex-wrap: nowrap;
             align-items: center;
             justify-content: space-between;
 
             .title {
-                font-size: 16px;
+                font-size: 14px;
                 color: #424242;
 
                 .large {
                     display: inline-block;
-                    font-size: 24px;
+                    font-size: 22px;
                 }
             }
 
@@ -86,16 +89,17 @@ $calendar: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0CAYAAADFeBvrAA
         .body {
             width: 100%;
             height: auto;
-            padding: 10px;
+            padding: 0px;
             color: #fa5b5bc4;
+            // margin: 16px 0;
 
             .sub {
                 font-size: 14px;
-                margin: 10px 0;
+                margin: 6px;
             }
 
             .main {
-                font-size: 30px;
+                font-size: 26px;
                 margin: 0;
                 font-weight: normal;
             }
@@ -104,7 +108,7 @@ $calendar: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0CAYAAADFeBvrAA
         .footer {
             width: 100%;
             height: auto;
-            padding: 10px;
+            padding: 0px;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -191,7 +195,8 @@ $calendar: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0CAYAAADFeBvrAA
         border-radius: 10px;
         z-index: 0;
 
-        &::after, &::before {
+        &::after,
+        &::before {
             content: "";
             position: absolute;
             height: 100%;
@@ -239,8 +244,8 @@ $calendar: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0CAYAAADFeBvrAA
     opacity: 1;
 }
 .fade-exit.fade-exit-active {
-    opacity: 0;
-    transition: opacity 300ms ease-in-out;
+    transform: translate(100%, 0);
+    transition: all 300ms ease-in-out;
 }
 .fade-exit-done {
     opacity: 0;
