--- a/ServiceRequest/src/styles.scss
+++ b/ServiceRequest/src/styles.scss
@@ -35,6 +35,8 @@ $assignedColor: #72a5f3;
             display: flex;
             align-items: center;
             justify-content: center;
+            font-size: 12px;
+            font-weight: 500;
 
             .icon {
                 width: 30px;
@@ -55,7 +57,7 @@ $assignedColor: #72a5f3;
                     height: auto;
                     padding: 6px 15px;
                     border-radius: 50px;
-                    margin-left: 15px;
+                    margin-left: 80px;
 
                     &.high {
                         background-color: #ec4b7b;
@@ -73,10 +75,15 @@ $assignedColor: #72a5f3;
 
     .body {
         width: 100%;
-        height: auto;
-        max-height: 100%;
-        padding: 8px 15px;
+        height: 100%;
         overflow: auto;
+        padding: 0px;
+
+        .data-list-item {
+            &:nth-child(odd) {
+                background-color: #f8f8f8;
+            }
+        }
 
         .list-thumbnail {
             position: relative;
@@ -84,7 +91,7 @@ $assignedColor: #72a5f3;
             height: auto;
             display: flex;
             align-items: stretch;
-            background-color: white;
+            background-color: transparent;
             padding: 10px;
             border-bottom: 1px solid #ccc;
 
@@ -117,7 +124,9 @@ $assignedColor: #72a5f3;
                 width: auto;
                 max-width: 70%;
                 margin: 0 10px;
-
+                font-size: 12px;
+                font-weight: 300;
+                
                 .request {
                     font-weight: 900;
                     padding: 3px;
@@ -147,7 +156,7 @@ $assignedColor: #72a5f3;
             .status {
                 width: auto;
                 margin: auto;
-                margin-right: 10px;
+                margin-right: 14px;
 
                 .label {
                     width: auto;
@@ -160,6 +169,7 @@ $assignedColor: #72a5f3;
                     text-align: center;
                     margin-bottom: 4px;
                     text-transform: capitalize;
+                    font-weight: 400;
                 }
 
                 .date {
@@ -295,8 +305,8 @@ $assignedColor: #72a5f3;
 }
 
 .modal-container {
-    .modal-panel {
-        &.sr-modal {
+    &.sr-modal {
+        .modal-panel {
             .srm-header {
                 width: 100%;
                 height: auto;
